[gd_scene load_steps=27 format=2]

[ext_resource path="res://scenes/actors/objects/cheep_cheep/cheep_cheep.gd" type="Script" id=1]
[ext_resource path="res://scenes/actors/objects/cheep_cheep/cheep_cheep.png" type="Texture" id=2]
[ext_resource path="res://scenes/actors/objects/bullet_bill/sound.wav" type="AudioStream" id=3]
[ext_resource path="res://scenes/actors/objects/goomba/poof.png" type="Texture" id=4]
[ext_resource path="res://scenes/actors/objects/goomba/poof.wav" type="AudioStream" id=5]
[ext_resource path="res://scenes/actors/objects/goomba/stomp.wav" type="AudioStream" id=6]
[ext_resource path="res://scenes/actors/objects/goomba/body.gd" type="Script" id=7]
[ext_resource path="res://scenes/actors/objects/cheep_cheep/recolorable.png" type="Texture" id=8]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 24, 24 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 8 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 8 )
region = Rect2( 48, 0, 24, 24 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="RayShape2D" id=9]
length = 10.0

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 8, 6 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 7, 7 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 150, 150 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 400, 400 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 11, 8 )

[sub_resource type="CanvasItemMaterial" id=16]
particles_animation = true
particles_anim_h_frames = 5
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticlesMaterial" id=17]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
anim_speed = 1.0

[sub_resource type="Animation" id=18]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.35 ),
"transitions": PoolRealArray( 1, 1, 2.92817, 1 ),
"update": 1,
"values": [ "default", "stomped", "stomped", "default" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.11, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 8.95777e-12, 1, 2.82843, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.5 ), Vector2( 1, 1 ), Vector2( 1, 0.1 ), Vector2( 0, 1.5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("..:top_point")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 2.92817, 1 ),
"update": 0,
"values": [ Vector2( 0, -9 ), Vector2( 0, 4 ), Vector2( 0, 9 ), Vector2( 0, -15 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.11, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 8.595e-07, 1, 2.92817, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 5 ), Vector2( 0, 0 ), Vector2( 0, 7 ), Vector2( 0, -8 ) ]
}

[node name="CheepCheep" type="Node2D"]
z_index = -2
script = ExtResource( 1 )
top_point = Vector2( 0, -9 )

[node name="CheepCheep" type="KinematicBody2D" parent="."]
collision_layer = 4
collision_mask = 85
script = ExtResource( 7 )

[node name="Sprite" type="AnimatedSprite" parent="CheepCheep"]
frames = SubResource( 4 )

[node name="ColorSprite" type="AnimatedSprite" parent="CheepCheep"]
modulate = Color( 1, 0, 0, 1 )
frames = SubResource( 8 )

[node name="GroundCollision" type="CollisionShape2D" parent="CheepCheep"]
visible = false
position = Vector2( 0, -1 )
shape = SubResource( 9 )

[node name="BoxCollision" type="CollisionShape2D" parent="CheepCheep"]
visible = false
position = Vector2( 0, -2 )
shape = SubResource( 10 )

[node name="AttackArea" type="Area2D" parent="CheepCheep"]
visible = false
position = Vector2( 0, -7 )
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CheepCheep/AttackArea"]
position = Vector2( 0, 8 )
shape = SubResource( 11 )

[node name="PlayerDetector" type="Area2D" parent="CheepCheep"]
visible = false
position = Vector2( 0, -7 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CheepCheep/PlayerDetector"]
shape = SubResource( 12 )

[node name="PlayerExitDetector" type="Area2D" parent="CheepCheep"]
visible = false
position = Vector2( 0, -7 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CheepCheep/PlayerExitDetector"]
shape = SubResource( 13 )

[node name="PlatformDetector" type="Area2D" parent="CheepCheep"]
visible = false
collision_layer = 4
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="CheepCheep/PlatformDetector"]
shape = SubResource( 14 )

[node name="WaterDetector" type="Area2D" parent="CheepCheep"]
visible = false
position = Vector2( 0, -7 )
collision_layer = 0
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="CheepCheep/WaterDetector"]
position = Vector2( 0, 8 )
shape = SubResource( 15 )

[node name="Stomp" type="AudioStreamPlayer" parent="CheepCheep"]
stream = ExtResource( 6 )
volume_db = -3.0
bus = "Sounds"

[node name="Hit" type="AudioStreamPlayer" parent="CheepCheep"]
stream = ExtResource( 3 )
volume_db = -10.0
bus = "Sounds"

[node name="Disappear" type="AudioStreamPlayer" parent="CheepCheep"]
stream = ExtResource( 5 )
volume_db = -3.0
bus = "Sounds"

[node name="Poof" type="Particles2D" parent="CheepCheep"]
material = SubResource( 16 )
emitting = false
amount = 1
lifetime = 0.35
one_shot = true
process_material = SubResource( 17 )
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="CheepCheep"]
anims/Stomped = SubResource( 18 )

[node name="BottomPos" type="Node2D" parent="CheepCheep"]
position = Vector2( 0, 5 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( 0.103275, -0.124877 )
rect = Rect2( -300, -300, 600, 600 )
pause_particles = false
process_parent = true
physics_process_parent = true
